Closed Bug 219586 Opened 22 years ago Closed 22 years ago

Eudora, Outlook mailboxes with "/" in name fail to import

Categories

(Thunderbird :: Account Manager, defect)

x86
Windows XP
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird0.8

People

(Reporter: matthew, Assigned: mscott)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Using Thunderbird 0.2 and importing email from Eudora 5.2.1 "Light mode", 2 folders with a name including a "/" character failed to import. Renaming the folders to remove the "/" character and re-importing with a clean profile worked correctly. Not sure which Component this should be on.
QA Contact: asa
Same as Mozilla Mail&News bug 140212. See also Bug 124287 Meta bug: Problems with folders having names with illegal charactersbug
I observe the same with Outlook Express Mailboxes, Thunderbird 0.3 RC, and Win98.
Bug still not removed in Thunderbird version 7.3.0 ! The problem you need to solve, as described in earlier reports, is how Thunderbird handles the "/" (slash) character while importing messages from other mail clients. A more detailed description of what happened in my case: After installing Thunderbird version 7.3.0 (the one available for download on 5.august), I tried to import my mail messages from MS Outlook Express, version 6.00.2800.1123 . Everything seemed to go along allright, until Thunderbird threw out an error message claiming it cannot import a folder named "MUSIC / NEWSLETTERS". I repeated the procedure two times, but it failed each time, with the same error message. Thunderbird also stopped responding when i tried to open the "bad" folders, and they were impossible to get rid off! This is not a minor level bug! After removing and reinstalling the application, I returned to Outlook, renamed the folders which contained the slash sign, and tried to import again. Everything was OK. If you need any more info, I would be glad to help. Regards, David, Slovenia
this would be a nice fix to have to roll out with the new migration stuff in .8. David, I have a spot in the migration code where I can translate source folder names (the name of the folder in Outlook, Eudora, etc.) to a destination folder name (the name of the actual folder in tbird). 1) We could leverage that code to check if the name has a '/' in it and convert that slash to something else 2) We could look into making folders with slashes work in mozilla (that may be a bigger undertaking...see Bug #140212)
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird0.8
would it be possible to munge/escape the disk/folder name, but set the pretty name to a string containing the slash?
Note to self: One could rename the name of the folder we create around here: http://lxr.mozilla.org/mozilla/source/mailnews/import/src/nsImportMail.cpp#877 then set a pretty name on the folder that gets created
*** Bug 230319 has been marked as a duplicate of this bug. ***
Summary: Eudora mailboxes with "/" in name fail to import → Eudora, Outlook mailboxes with "/" in name fail to import
Attached patch possible fixSplinter Review
Comment on attachment 156391 [details] [diff] [review] possible fix David, what do you think about fixing the bug this way: 1) nsLocalMailFolder was already hashing the folder name into a "safefoldername" for the actual folder on disk. But it still used the user specified name for the name of the summary file, for the RDF URI that represents this folder,etc. etc. Hence all of the problems. 2) This patch attempts to fix ::CreateSubFolder to use the safe (hashed) folder name everywhere when constructing the folder. Then right at the end, we use the real user passed in name as the prettyName on the folder. 3) This patch also allows users to create local folders with slashes in them as this bug wasn't import specific. 4) Do we need to fix this for imap or should we just treat that as a separate bug.
Attachment #156391 - Flags: superreview?(bienvenu)
Attachment #156391 - Flags: superreview?(bienvenu) → superreview+
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 257833 has been marked as a duplicate of this bug. ***
Scott, can your patch cause Bug 264071 problem?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: