Bug #219586 --> Eudora, Outlook mailboxes with "/" in name fail to import. Unable to create local folders with forward slashes in the name on Windows.

sr=bienvenu